# scout

./: .gitlab-ci.yml  AUTHORS  README.md  scout.repos  scout_public.repos
scout/: CMakeLists.txt  package.xml
scout_bringup/: CMakeLists.txt  README.md  package.xml
scout_bringup/config/: controller_manager.yaml  mobile_base_controller.yaml
scout_bringup/launch/: scout_base.launch.py  scout_teleop.launch.py  scout_test.launch.py
scout_bringup/python/: scout_bringup.py
scout_bringup/scripts/: urdf_description.py
scout_bringup/test/: test_urdf_description.py
scout_description/: CMakeLists.txt  README.md  package.xml
scout_description/config/: scout_mini.yaml  scout_v2.yaml  teleop.yaml
scout_description/launch/: view_scout_mini.launch.py  view_scout_v2.launch.py
scout_description/python/: scout_description.py
scout_description/ros2_control/: scout.ros2_control.xacro  scout_mini.ros2_control.urdf.xacro  scout_v2.ros2_control.urdf.xacro
scout_description/test/: test_scout_description.py
scout_description/urdf/: scout.xacro  scout_mini.urdf.xacro  scout_v2.urdf.xacro
scout_description/urdf/visual/: chassis.xacro  wheels.xacro
scout_hardware/: CMakeLists.txt  README.md  package.xml  scout_hardware.xml
scout_hardware/include/scout_hardware/: scout_hardware.hpp
scout_hardware/src/: scout_hardware.cpp
