<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scout</name>
  <version>0.0.0</version>
  <description>The agilex scout robots stack</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>scout_bringup</exec_depend>
  <exec_depend>scout_description</exec_depend>
  <exec_depend>scout_hardware</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>