<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scout_bringup</name>
  <version>0.0.0</version>
  <description>Package containgin scout robot launch files.</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>romea_common_bringup</depend>
  <depend>scout_description</depend>

  <exec_depend>romea_mobile_base</exec_depend>
  <exec_depend>romea_simulation</exec_depend>
  <exec_depend>romea_teleop_drivers</exec_depend>
  <exec_depend>romea_joystick_bringup</exec_depend>
  <exec_depend>romea_cmd_mux</exec_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>