<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>scout_description</name>
  <version>0.0.0</version>
  <description>Package containing URDF and configuration files of scout robot.</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>xacro</depend>

  <exec_depend>romea_simulation</exec_depend>
  <exec_depend>romea_mobile_base</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>